@@ -2,7 +2,7 @@
  * #%L
  * Alfresco Remote API
  * %%
- * Copyright (C) 2005 - 2016 Alfresco Software Limited
+ * Copyright (C) 2005 - 2023 Alfresco Software Limited
  * %%
  * This file is part of the Alfresco software. 
  * If the software was purchased under a paid Alfresco license, the terms of 
@@ -344,7 +344,7 @@ public class WebDAV
             }
             else if (davPropName.equals(WebDAV.XML_GET_CONTENT_LENGTH))
             {
-                value = new Long(contentData.getSize());
+                value = Long.valueOf(contentData.getSize());
             }
         }
         return value;
